# enclavia

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  e2e-synchronizer.yml
enclavia/: Cargo.toml  README.md
enclavia-chain-init/: Cargo.toml
enclavia-chain-init/src/: attestation.rs  config.rs  main.rs
enclavia-cli/: Cargo.toml  README.md
enclavia-cli/src/: api.rs  config.rs  error.rs  keys.rs  lib.rs  main.rs  signer.rs
enclavia-cli/src/commands/: auth.rs  deploy.rs  enclave.rs  key.rs  mod.rs  push.rs  reproduce.rs  resolve.rs  secrets.rs  upgrade.rs
enclavia-cli/tests/: json_output.rs
enclavia-crypto/: Cargo.toml  README.md
enclavia-crypto/examples/: kms_real_smoke.rs
enclavia-crypto/src/: lib.rs  main.rs  sigv4.rs
enclavia-egress/: Cargo.toml  README.md
enclavia-egress/src/: config.rs  lib.rs  main.rs  policy.rs  resolver.rs  stack.rs  transport.rs
enclavia-egress/tests/: forward.rs  resolver_wire.rs
enclavia-protocol/: Cargo.toml  README.md
enclavia-protocol/src/: attestation.rs  chain.rs  custody.rs  egress.rs  egress_config.rs  kms_policy.rs  kms_recipient.rs  lib.rs  mesh.rs  noise.rs  staging.rs
enclavia-secrets-init/: Cargo.toml
enclavia-secrets-init/src/: main.rs
enclavia-server/: Cargo.toml  README.md
enclavia-server/src/: attestation.rs  config.rs  main.rs
enclavia-vsock/: Cargo.toml  README.md
enclavia-vsock/src/: lib.rs
enclavia-wasm/: Cargo.toml  README.md  smoke.mjs
enclavia-wasm/npm/: package.json
enclavia-wasm/src/: lib.rs
enclavia/examples/: test_client.rs
enclavia/src/: client.rs  error.rs  http.rs  lib.rs  message.rs  noise.rs  request.rs  response.rs  stream.rs  transport.rs  ws.rs
enclavia/tests/: reconnect.rs  upgrade.rs  ws_adapter.rs
mock-kms/: Cargo.toml  README.md
mock-kms/src/: main.rs
nbd-client/: Cargo.toml  README.md
nbd-client/src/: main.rs  nbd.rs  rollback.rs
nix/: names-responder.py  synchronizer-eif.nix  synchronizer-init.sh
skills/enclavia/: SKILL.md
synchronizer/: Cargo.toml  README.md
synchronizer-names-init/: Cargo.toml
synchronizer-names-init/src/: main.rs
synchronizer/examples/: mesh_client.rs
synchronizer/src/: client.rs  lib.rs  listener.rs  main.rs  node.rs  wire.rs
synchronizer/src/mesh/: attestation.rs  config.rs  handshake.rs  identity.rs  mod.rs  rpc.rs  transport.rs
synchronizer/src/raft/: forward.rs  join.rs  membership.rs  mod.rs  network.rs  serve.rs  store.rs
synchronizer/tests/: client.rs  mesh.rs  raft_client_routing.rs  raft_node_view_consistent.rs  raft_replication.rs
tests/: run_e2e_synchronizer.sh
