# In-enclave crate: runs inside the VM (real Nitro or QEMU) and reaches
# the host unconditionally via tokio-vsock. No debug/enclave feature
# split. See "Transport conventions" in CLAUDE.md before adding any
# transport-related feature here.

[package]
name = "enclavia-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "In-enclave key management: KMS-backed LUKS unsealing for the persistent storage volume."

[dependencies]
tokio = { workspace = true, features = ["net", "io-util", "macros", "rt-multi-thread", "fs", "process"] }
tracing.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true
serde_json.workspace = true
base64.workspace = true
rsa.workspace = true
sha2.workspace = true
rand.workspace = true

hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true

# In-enclave TLS + SigV4 to real AWS KMS (production path). The host's vsock
# peer is a raw TCP relay; the enclave validates the KMS cert chain
# (webpki-roots, compiled in = PCR-measured) and SigV4-signs requests with
# hmac/sha2. See `sigv4.rs` and `kms_call` / `tls_connect` in main.rs.
tokio-rustls.workspace = true
webpki-roots.workspace = true
hmac.workspace = true
hex.workspace = true
chrono.workspace = true

clap.workspace = true

tokio-vsock = { workspace = true }

# KMS phase 2 (#198): the Decrypt call asks KMS to return the plaintext as
# a CiphertextForRecipient envelope encrypted to an ephemeral key we attest
# via NSM, so the parent proxying the call never sees the passphrase.
# `nix` feature = the /dev/nsm driver (nsm_init/process_request).
aws-nitro-enclaves-nsm-api = { workspace = true, features = ["nix"] }
# `kms_recipient::decode` opens that envelope. default-features = false to
# skip the async-transport (tokio/tracing) modules we don't use.
enclavia-protocol = { path = "../enclavia-protocol", default-features = false }

[lib]
name = "enclavia_crypto"
path = "src/lib.rs"

[[bin]]
name = "enclavia-crypto"
path = "src/main.rs"
