[package]
name = "enclavia-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared wire types and Noise+CBOR responder helpers used by the Enclavia server, router, and SDK."

[features]
default = ["async-transport"]
async-transport = ["tokio", "tracing"]
# Enables test_utils::FakeAttestation for downstream test suites. Pulls
# in nothing optional — the helpers only use deps that are already
# unconditionally required for attestation verification.
test-utils = []

[dependencies]
snow = { workspace = true }
serde.workspace = true
# Used by kms_policy.rs to parse the stringified KMS key policy the enclave
# verifies at boot (#198 follow-up). A regular dependency (not dev-only)
# because the verification runs in production.
serde_json.workspace = true
ciborium.workspace = true
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
# Attestation verification (used by SDK and synchronizer). Unconditional
# because the module is small, has no IO dependencies, and is wanted by
# both production callers — gating it behind a feature would just be
# bookkeeping.
attestation-doc-validation = { workspace = true }
# The workspace pins `default-features = false`, which strips the `nix`
# feature (NSM driver / `/dev/nsm` syscalls). We only need the `api`
# module's pure data types here.
aws-nitro-enclaves-nsm-api.workspace = true
base64.workspace = true
hex.workspace = true
sha2.workspace = true
thiserror.workspace = true
# Chain-link payload typed fields (UUID for enclave_id / revokes,
# DateTime for booted_at / valid_from / issued_at) and the signature
# verifier on upgrade / revocation links. Same shape every consumer
# of the public chain endpoint will need to re-implement otherwise.
uuid = { workspace = true }
chrono = { workspace = true }
p256 = { workspace = true }
serde_bytes = "0.11"
# KMS phase 2 (#198) CiphertextForRecipient codec (kms_recipient.rs): the
# RSA-OAEP-wrapped AES-256-CBC CMS envelope KMS returns to an attested
# enclave, plus its mock-kms producer side.
rsa = { workspace = true }
rand = { workspace = true }
cms = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
der = { workspace = true }
spki = { workspace = true }
x509-cert = { workspace = true }

