# In-enclave crate: runs inside the VM (real Nitro or QEMU) and reaches
# the host unconditionally via tokio-vsock. No debug/enclave feature
# split. See "Transport conventions" in enclavia-crates/CLAUDE.md before
# adding any transport-related feature here.

[package]
name = "enclavia-secrets-init"
# In-enclave/dev binary, not part of the crates.io publish set (the SDK,
# protocol, and CLI are). Flip deliberately if that ever changes.
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "In-enclave init helper: pulls a host-side CBOR payload over vsock and lands it in one of two sinks. --mode workload-secrets (vsock 5004) merges per-enclave secrets into the workload's OCI config.json env (#169); --mode aws-creds (vsock 5013) writes AWS_* creds to a tmpfs env file init.sh sources before enclavia-crypto init (#199/#198)."

[dependencies]
tokio = { workspace = true, features = ["net", "io-util", "macros", "rt-multi-thread", "time", "fs"] }
tokio-vsock = { workspace = true }
enclavia-vsock = { path = "../enclavia-vsock" }
ciborium = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "enclavia-secrets-init"
path = "src/main.rs"
