# In-enclave crate: runs inside the VM (real Nitro or QEMU) and reaches
# the host unconditionally via tokio-vsock. No debug/enclave feature
# split. See "Transport conventions" in CLAUDE.md before adding any
# transport-related feature here.

[package]
name = "enclavia-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "In-enclave Noise responder: terminates the encrypted channel and forwards plaintext to the inner container."

[dependencies]
enclavia-protocol = { path = "../enclavia-protocol" }
enclavia-vsock = { path = "../enclavia-vsock" }
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true
ciborium.workspace = true
serde.workspace = true
serde_json.workspace = true
# ECDSA P-256 for verifying signed `ControlCommand`s from the backend
# (#47). The pubkey is read from `enclavia-config.json` at startup as
# 65-byte uncompressed SEC1; signatures are 64-byte raw r||s.
p256 = { workspace = true }
rand.workspace = true
base64.workspace = true
sha2.workspace = true
# Own-clock enforcement of the measured minimum upgrade delay
# (`UpgradePayload.valid_from` floor in `run_prepare_upgrade`).
chrono = { workspace = true }
tokio-vsock = { workspace = true }
# Re-enable the `nix` feature: enclavia-server is the one place that
# actually drives `/dev/nsm` to produce attestations.
aws-nitro-enclaves-nsm-api = { workspace = true, features = ["nix"] }

[[bin]]
name = "enclavia-server"
path = "src/main.rs"

[dev-dependencies]
uuid = { workspace = true }
