[package]
name = "mock-kms"
# In-enclave/dev binary, not part of the crates.io publish set (the SDK,
# protocol, and CLI are). Flip deliberately if that ever changes.
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dev-only KMS Trent endpoint used by the local stack and the builder's QEMU wrappers."

[dependencies]
tokio = { workspace = true, features = ["net", "io-util", "macros", "rt-multi-thread", "fs", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
rsa.workspace = true
sha2.workspace = true
rand.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true
uuid = { workspace = true }
# KMS phase 2 (#198): the `Recipient` Decrypt mode. We read the ephemeral
# pubkey out of the request's attestation document (decode only — the mock
# does not verify the signature) and wrap the plaintext with
# `kms_recipient::encode`, so the QEMU e2e drives the same in-enclave path
# as real KMS.
enclavia-protocol = { path = "../enclavia-protocol", default-features = false }
attestation-doc-validation = { workspace = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "enclavia-mock-kms"
path = "src/main.rs"
