# In-enclave crate: runs inside the VM (real Nitro or QEMU) and reaches
# the host unconditionally via tokio-vsock. No debug/enclave feature
# split. See "Transport conventions" in CLAUDE.md before adding any
# transport-related feature here.

[package]
name = "nbd-client"
# In-enclave/dev binary, not part of the crates.io publish set (the SDK,
# protocol, and CLI are). Flip deliberately if that ever changes.
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "In-enclave NBD client over vsock: backs the encrypted filesystem on top of the host-side storage relay."

[dependencies]
tokio = { workspace = true, features = ["net", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true

tokio-vsock = { workspace = true }

# --- #16 anti-rollback wiring (synchronizer pinning) ---
# Customer-side synchronizer RPC client (Noise initiator + Pin/Get).
# The `client` feature deliberately pulls in NO mesh / NSM driver /
# openraft; see synchronizer/Cargo.toml.
synchronizer = { path = "../synchronizer", features = ["client"] }
# `extract_own_pcrs` (derive our own PcrKey from the doc we just minted)
# and the synchronizer relay port constant. The async Noise plumbing
# lives behind the synchronizer client, so default features stay off.
enclavia-protocol = { path = "../enclavia-protocol", default-features = false }
enclavia-vsock = { path = "../enclavia-vsock" }
# SHA-256 of the primary btrfs superblock region: the pinned commitment.
sha2.workspace = true
# Drive /dev/nsm for the real attestation document (`nix` turns the
# driver syscalls on; the workspace pin strips it by default).
aws-nitro-enclaves-nsm-api = { workspace = true, features = ["nix"] }
# Read the #47 control pubkey out of /etc/enclavia/config.json (the same
# field enclavia-server reads).
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
# Decode the CBOR ChainLink frame chain-host serves on the upgrade-link
# fetch path (#46).
ciborium.workspace = true

[[bin]]
name = "enclavia-nbd-client"
path = "src/main.rs"
