# In-enclave crate: runs inside the VM (real Nitro or QEMU) and reaches
# the host unconditionally via tokio-vsock. No debug/enclave feature
# split. See "Transport conventions" in CLAUDE.md before adding any
# transport-related feature here.

[package]
name = "synchronizer-names-init"
# In-enclave/dev binary, not part of the crates.io publish set (the SDK,
# protocol, and CLI are). Flip deliberately if that ever changes.
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "In-enclave init helper: fetches this node's MESH_SELF_NAME + MESH_PEERS from the host over an unmeasured vsock side-channel, so all three nodes can run one identical EIF with identical PCRs."

[dependencies]
tokio = { workspace = true, features = ["net", "io-util", "macros", "rt-multi-thread", "time"] }
tokio-vsock = { workspace = true }
# Runtime host-vsock-CID detection (parent is CID 3 on real Nitro, 2 under
# QEMU) so the identity fetch dials the right CID and a single EIF boots on
# both transports.
enclavia-vsock = { path = "../enclavia-vsock" }

[[bin]]
name = "synchronizer-names-init"
path = "src/main.rs"
